fix: github actions add permissions write

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,5 @@ jobs:
   release-package:
     if: github.event_name == 'push'
     uses: ./.github/workflows/_release-packages.yml
+    permissions:
+      contents: write
