add upload to pypi

--- a/.github/workflows/_release-packages.yml
+++ b/.github/workflows/_release-packages.yml
@@ -48,3 +48,13 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install release dependencies
+        run: pip install --no-cache-dir -U pip . twine
+
+      - name: Upload to PyPI
+        run: twine upload dist/*
+        env:
+          TWINE_REPOSITORY_URL: https://upload.pypi.org/legacy/
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
