--- a/.github/workflows/_release-packages.yml
+++ b/.github/workflows/_release-packages.yml
@@ -59,8 +59,7 @@ jobs:
         run: pip install --no-cache-dir -U pip . twine packaging
 
       - name: Upload to PyPI
-        run: twine upload dist/*
-        env:
-          TWINE_REPOSITORY_URL: https://upload.pypi.org/legacy/
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
