change workflows execution

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -1,7 +1,11 @@
 name: build-packages
 
-on:
-  workflow_call:
+on: 
+  push:
+    branches:
+      - main
+    tags:
+      - "*"
 
 jobs:
   build-packages:
