--- a/.github/workflows/release-packages.yml
+++ b/.github/workflows/release-packages.yml
@@ -1,7 +1,10 @@
 name: release-packages
 
 on:
-  workflow_call:
+  workflow_run:
+    workflows: ["build-packages"]
+    types:
+      - completed
 
 jobs:
   release-packages:
