--- a/.github/workflows/_release-packages.yml
+++ b/.github/workflows/_release-packages.yml
@@ -1,10 +1,7 @@
 name: release-packages
 
 on:
-  workflow_run:
-    workflows: ["build-packages"]
-    types:
-      - completed
+  workflow_call:
 
 jobs:
   release-packages:
