--- a/.github/workflows/_code-scan.yml
+++ b/.github/workflows/_code-scan.yml
@@ -1,12 +1,7 @@
 name: code-scan
 
-on: 
-  push:
-    branches:
-      - main
-    tags:
-      - "*"
-  pull_request:
+on:
+  workflow_call:
 
 jobs:
   code-scan:
